
h2(eveTopic). Version 1.10

* [Feature] the engine version to be used is now configurable via preferences
* [Feature] the progress of a scan is now shown in a progress bar

* [Bug Fix] fixed a bug where an existing plot window accidently continued drawing points on a new scan (when the same devices where used)
* [Bug Fix] Message dialogs are now shown in a centered position of their parent

h2(eveTopic). Version 1.8

* [Feature] set default plot buffer size to 500

h2(eveTopic). Version 1.7

* [Bug Fix] fixed a bug where a select box for discrete values was editable

h2(eveTopic). Version 1.6

* [Bug Fix] removed a bug where the stop button (for detectors) did not work due to a non-integer value (e.g. 'Acquire').

h2(eveTopic). Version 1.5

* [Feature] detectors and channels are now stoppable (via @Device Inspector@)

* [Bug Fix] removed a bug where the precision of the plot table entries was incorrect

h2(eveTopic). Version 1.4

* [Feature] new filter dialog for the @Messages@ view
* [Feature] the message type (@Messages@ view) is now shown as an icon
* [Feature] the table in the @Messages@ view is now sortable by type (the sort state is remembered by the application)
* [Feature] limited the size of the table (number of entries) of the @Messages@ view (for performance reasons)

* [Bug Fix] fixed scrolling issues in the @Messages@ view
* [Bug Fix] removed a bug where an error occurred if new messages arrived while saving them into a file (synchronization)
* [Bug Fix] fixed a bug where a drag and drop added all available devices to the device inspector (not just the ones used in the current scan)
* [Bug Fix] fixed a bug where the channel access configuration depended on the network the application was started from
* [Bug Fix] fixed a bug where the auto play button of the @Engine@ view wasn't properly updated if it was changed from another client

h2(eveTopic). Version 1.2

* [Feature] Monitorable Options