@@ -1,1 +1,1 @@
-<?xml version='1.0' encoding='utf-8' ?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>whatsnew</title><link type="text/css" rel="stylesheet" href="PLUGINS_ROOT/de.ptb.epics.eve.viewer/help/css/viewer.css"/></head><body><h1 id="ReleaseNotes" class="eveTopic">Release Notes</h1><h2 id="Version1.10" class="eveTopic">Version 1.10</h2><ul><li>[Feature] the engine version to be used is now configurable via preferences</li><li>[Feature] the progress of a scan is now shown in a progress bar</li></ul><ul><li>[Bug Fix] fixed a bug where an existing plot window accidently continued drawing points on a new scan (when the same devices where used)</li><li>[Bug Fix] Message dialogs are now shown in a centered position of their parent</li></ul><h2 id="Version1.8" class="eveTopic">Version 1.8</h2><ul><li>[Feature] set default plot buffer size to 500</li></ul><h2 id="Version1.7" class="eveTopic">Version 1.7</h2><ul><li>[Bug Fix] fixed a bug where a select box for discrete values was editable</li></ul><h2 id="Version1.6" class="eveTopic">Version 1.6</h2><ul><li>[Bug Fix] removed a bug where the stop button (for detectors) did not work due to a non-integer value (e.g. &#8218;Acquire&#8217;).</li></ul><h2 id="Version1.5" class="eveTopic">Version 1.5</h2><ul><li>[Feature] detectors and channels are now stoppable (via <code>Device Inspector</code>)</li></ul><ul><li>[Bug Fix] removed a bug where the precision of the plot table entries was incorrect</li></ul><h2 id="Version1.4" class="eveTopic">Version 1.4</h2><ul><li>[Feature] new filter dialog for the <code>Messages</code> view</li><li>[Feature] the message type (<code>Messages</code> view) is now shown as an icon</li><li>[Feature] the table in the <code>Messages</code> view is now sortable by type (the sort state is remembered by the application)</li><li>[Feature] limited the size of the table (number of entries) of the <code>Messages</code> view (for performance reasons)</li></ul><ul><li>[Bug Fix] fixed scrolling issues in the <code>Messages</code> view</li><li>[Bug Fix] removed a bug where an error occurred if new messages arrived while saving them into a file (synchronization)</li><li>[Bug Fix] fixed a bug where a drag and drop added all available devices to the device inspector (not just the ones used in the current scan)</li><li>[Bug Fix] fixed a bug where the channel access configuration depended on the network the application was started from</li><li>[Bug Fix] fixed a bug where the auto play button of the <code>Engine</code> view wasn&#8217;t properly updated if it was changed from another client</li></ul><h2 id="Version1.2" class="eveTopic">Version 1.2</h2><ul><li>[Feature] Monitorable Options</li><li>[Feature] Lexicographical ordering in the Devices View (Tree Viewer)</li></ul><h2 id="Version1.1" class="eveTopic">Version 1.1</h2><ul><li>[Feature] eveCSS is now based on Control System Studio 3.0.</li><li>[Feature] Added Probe Application.</li><li>[Feature] Added CSS Context Menu allowing &#8222;copy pv name to clipboard&#8221;. <a href="/help/topic/de.ptb.epics.eve.viewer/help/content/tasks/copypvtoclipboard.html">Read more...</a></li><li>[Feature] Process Variables now have configurable (GUI) update intervals. <a href="/help/topic/de.ptb.epics.eve.viewer/help/content/concepts/pvupdateinterval.html">Read more...</a></li><li>[Feature] Added menu entry &#8222;Window-&gt;Reset Perspective&#8221; to reset the active perspective. <a href="/help/topic/de.ptb.epics.eve.viewer/help/content/tasks/resetperspective.html">Read more...</a></li><li>[Feature] Added Filtering to the Local Devices View. <a href="/help/topic/de.ptb.epics.eve.viewer/help/content/tasks/filterdevices.html">Read more...</a></li><li>[Feature] Added toolbar buttons to expand/collapse all items of the tree (Devices View)</li></ul></body></html>
+<?xml version='1.0' encoding='utf-8' ?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>whatsnew</title><link type="text/css" rel="stylesheet" href="PLUGINS_ROOT/de.ptb.epics.eve.viewer/help/css/viewer.css"/></head><body><h1 id="ReleaseNotes" class="eveTopic">Release Notes</h1><h2 id="Version1.10" class="eveTopic">Version 1.10</h2><ul><li>[Feature] the engine version to be used is now configurable via preferences</li><li>[Feature] the progress of a scan is now shown in a progress bar</li></ul><ul><li>[Bug Fix] fixed a bug where an existing plot window accidently continued drawing points on a new scan (when the same devices where used)</li><li>[Bug Fix] Message dialogs are now shown in a centered position of their parent</li><li>[Bug Fix] the Plot View is now shown in all perspectives</li></ul><h2 id="Version1.8" class="eveTopic">Version 1.8</h2><ul><li>[Feature] set default plot buffer size to 500</li></ul><h2 id="Version1.7" class="eveTopic">Version 1.7</h2><ul><li>[Bug Fix] fixed a bug where a select box for discrete values was editable</li></ul><h2 id="Version1.6" class="eveTopic">Version 1.6</h2><ul><li>[Bug Fix] removed a bug where the stop button (for detectors) did not work due to a non-integer value (e.g. &#8218;Acquire&#8217;).</li></ul><h2 id="Version1.5" class="eveTopic">Version 1.5</h2><ul><li>[Feature] detectors and channels are now stoppable (via <code>Device Inspector</code>)</li></ul><ul><li>[Bug Fix] removed a bug where the precision of the plot table entries was incorrect</li></ul><h2 id="Version1.4" class="eveTopic">Version 1.4</h2><ul><li>[Feature] new filter dialog for the <code>Messages</code> view</li><li>[Feature] the message type (<code>Messages</code> view) is now shown as an icon</li><li>[Feature] the table in the <code>Messages</code> view is now sortable by type (the sort state is remembered by the application)</li><li>[Feature] limited the size of the table (number of entries) of the <code>Messages</code> view (for performance reasons)</li></ul><ul><li>[Bug Fix] fixed scrolling issues in the <code>Messages</code> view</li><li>[Bug Fix] removed a bug where an error occurred if new messages arrived while saving them into a file (synchronization)</li><li>[Bug Fix] fixed a bug where a drag and drop added all available devices to the device inspector (not just the ones used in the current scan)</li><li>[Bug Fix] fixed a bug where the channel access configuration depended on the network the application was started from</li><li>[Bug Fix] fixed a bug where the auto play button of the <code>Engine</code> view wasn&#8217;t properly updated if it was changed from another client</li></ul><h2 id="Version1.2" class="eveTopic">Version 1.2</h2><ul><li>[Feature] Monitorable Options</li><li>[Feature] Lexicographical ordering in the Devices View (Tree Viewer)</li></ul><h2 id="Version1.1" class="eveTopic">Version 1.1</h2><ul><li>[Feature] eveCSS is now based on Control System Studio 3.0.</li><li>[Feature] Added Probe Application.</li><li>[Feature] Added CSS Context Menu allowing &#8222;copy pv name to clipboard&#8221;. <a href="/help/topic/de.ptb.epics.eve.viewer/help/content/tasks/copypvtoclipboard.html">Read more...</a></li><li>[Feature] Process Variables now have configurable (GUI) update intervals. <a href="/help/topic/de.ptb.epics.eve.viewer/help/content/concepts/pvupdateinterval.html">Read more...</a></li><li>[Feature] Added menu entry &#8222;Window-&gt;Reset Perspective&#8221; to reset the active perspective. <a href="/help/topic/de.ptb.epics.eve.viewer/help/content/tasks/resetperspective.html">Read more...</a></li><li>[Feature] Added Filtering to the Local Devices View. <a href="/help/topic/de.ptb.epics.eve.viewer/help/content/tasks/filterdevices.html">Read more...</a></li><li>[Feature] Added toolbar buttons to expand/collapse all items of the tree (Devices View)</li></ul></body></html>
